# NUP-annotator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
annotator_exports/: Megan Richards_annotations.json  ahmet_annotations.json  cedricwhitney_annotations.json  kizoey_annotations.json  niloofar_annotations.json  project-1-at-2025-02-13-00-34-2ee3b89f.json  project-1-at-2025-02-15-16-35-1334afd1.json  project-1-at-2025-02-20-03-27-a5d0d43b.json  victor_annotations.json  yuntian_annotations.json  zhiping_annotations.json  zoey_annotations.json
data/: batch_1.json  batch_10.json  batch_11.json  batch_12.json  batch_2.json  batch_3.json  batch_4.json  batch_5.json  batch_6.json  batch_7.json  batch_8.json  batch_9.json  cedric_120_sample.json  initial_tasks.json  test_input.jsonl  test_nowrap.jsonl
data/batches/: anka_rater_disagreement.json  batch_10.json  batch_11.json  batch_5.json  batch_7.json  batch_8.json  batch_9.json  master_sample_file.json  shayne_rater_disagreement.json
data/rater_agreement/: completeness_report.csv
data/reports/: overall_agreement.csv
reports/: agreement_matrix.csv  detailed_report.json  overall_agreement.csv
src/: converter.py  create_project.py
src/analysis/: README.md  agreement.py  load.py  report.py  types.py
src/conversation_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/core/: create_project.py  label_studio_integration.py  start_project.py
src/tools/: __init__.py  add_conversation_ids.py  analyze_agreement.py  analyze_turns.py  (+17 more)
tests/: test_converter.py
(+18 files in other folders)
