[project]
name = "conversation_project"
version = "0.1.0"
description = "Convert CSV conversation data into JSON for Label Studio"
authors = [{ name = "Cedric Whitney", email = "cedricwhitney@gmail.com" }]
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.poetry]
# ... other configuration ...

# Include the data directory and initial tasks
include = [
    "data/initial_tasks.json",
]

# ... rest of configuration ...

